# dee

./: Cargo.toml  profiles.json  test.json
benchmark/: .gitignore  config.yaml  plot.py  pyproject.toml  run.py  smoke.yaml  test.yaml
benchmark/src/dee_benchmark/: plot.py  run.py
dee/: Cargo.toml
dee-cli/: Cargo.toml
dee-cli/src/: main.rs  opt.rs  run.rs
dee/src/: connections.rs  connectors.rs  dag.rs  dbt.rs  executor.rs  file.rs  graph.rs  lib.rs  opt.rs  profile.rs  profiles.rs
dee/src/adapters/: dbt.rs
dee/src/connectors/: duckdb.rs  postgres.rs
dee/src/opt/: cse.rs  hmp.rs  omp.rs
utils/: estimate_view_runtime.py  operator_rank.py
