[package]
name = "dee-cli"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
dee = { path = "../dee" }
clap = { version = "4.5.60", features = ["derive"] }
env_logger = "0.11.9"
log = "0.4.29"
tokio = { version = "1.50.0", features = ["full"] }
serde_json = "1.0.149"
petgraph = "0.8.3"
serde = "1.0.228"
chrono = { version = "0.4.44", features = ["serde"] }
