[package]
name = "dee"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
duckdb = { version = "1.10500.0", features = ["bundled", "modern-full"] }
thiserror = "2.0.18"
async-trait = "0.1.89"
tokio = { version = "1.50.0", features = ["full"] }
tempfile = "3.27.0"
r2d2 = "0.8.10"
futures = "0.3.32"
petgraph = "0.8.3"
log = "0.4.29"
